# salahsense

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: salah_sequences.json  salah_states.json  thresholds.toml
docs/: phase-1-plan.md
scripts/: count_rakat_video.py  detect_salam_video.py  run_app.sh  video_pose_reader.py
src/salahsense/: __init__.py  app.py
src/salahsense/capture/: __init__.py  video_reader.py
src/salahsense/config/: salah_sequences.py  salah_states.py  settings.py
src/salahsense/counting/: __init__.py  rakat_counter.py  salah_sequence_tracker.py  salam_detector.py
src/salahsense/face/: __init__.py  landmarker_estimator.py
src/salahsense/output/: __init__.py  console.py  file_logger.py  overlay.py  udp_sender.py
src/salahsense/pose/: __init__.py  estimator.py
src/salahsense/state_machine/: __init__.py  salah_state_machine.py  vertical_state_machine.py
tests/: test_rakat_counter.py  test_salah_sequences.py  test_salah_state_machine.py  test_salah_states.py  test_salam_detector.py  test_settings.py  test_vertical_state_machine.py
